# GatherFi

./: Anchor.toml  LICENSE  README.md  package.json  tsconfig.json
app/: package.json
programs/gatherfi/: Cargo.toml
programs/gatherfi/src/: errors.rs  lib.rs
programs/gatherfi/src/instructions/: contribute.rs  create_event.rs  mint_ticket.rs  mod.rs
programs/gatherfi/src/state/: budget.rs  escrow.rs  event.rs  mod.rs  profit.rs  ticket.rs
tests/: gatherfi.ts
